@@ -8,3 +8,9 @@ comment
 /%
 /*data asm*/
 %/
+
+0;
+10.1f64;
+20s64;
+99s16;
+30s8;
